--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,16 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.HomeFragment">
+
+    >
+
+    <TextView
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:id="@+id/btn_login"
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go to web"
+        android:layout_width="@dimen/_305sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_gravity="center"
+        android:elevation="@dimen/_5sdp"
+        android:gravity="center"
+
+        android:text="login"
+        android:textAllCaps="false"
+
+
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
