--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,8 @@
 <resources>
 
     <style name="Theme.Cleanappkotlin" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.AppCompat" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.AppCompat.Light" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
